# data-check

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-local  README.md  app.py  client.py  diff.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data_check/: client.py  data_formatter.py  data_helpers.py  data_processor.py  main.py  query_client.py  streamlit_app.py  tools.py
data_check/models/: table.py
data_check/processors/: bigquery.py  utils.py
data_check/query/: query_bq.py
src/: app.py  client.py  data_formatter.py  data_helpers.py  data_processor.py  diff.py  main.py
src/models/: table.py
tests/: test_bq_client.py  test_client.py  test_data_formatter.py  test_data_processor.py  test_diff.py  test_table.py
tests/processors/: test_bigquery.py  test_utils.py
